# Pytest-Capstone-Project

./: README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
src/capstone_app/: __init__.py  api.py  domain.py
test/: conftest.py
test/api/: test_api.py
test/performance/: test_perf.py
test/ui/: test_ui_smoke.py
test/unit/: test_domain.py
web/: index.html
