[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-capstone"
version = "0.1.0"
description = "Pytest capstone project: unit + API + UI + perf + mutation"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
